:sparkles: fix scrollbar issue

--- a/style.css
+++ b/style.css
@@ -1869,6 +1869,7 @@ html {
   flex-wrap: wrap;
   margin-right: -15px;
   margin-left: -15px;
+  width: 100%;
 }
 
 .no-gutters {
